Maintain: Moving some memory config from arch to kconfig.
[memory] Functional maintenance.
    -- We give the user the right to choose the segment size of
        the decentralized model, instead of being forcibly
        defined in the instruction set.

    -- The size design option of virtual mapping address space is added,
        because in the 64-bit address model, the memory of vmalloc area
        is below the direct mapping area.

Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/arch/Kconfig
+++ b/arch/Kconfig
@@ -32,6 +32,8 @@ config ARCH_X86_64
     select ARCH_64BIT
     select ARCH_HAS_INT128
     select ARCH_LITTLE_ENDIAN
+    select ARCH_HAS_HUGE_PMD
+    select ARCH_HAS_HUGE_PUD
     select ARCH_HAS_MMU
     select ARCH_HAS_PMIO
     select ARCH_HAS_KASAN
