--- a/configs/x86_64_defconfig
+++ b/configs/x86_64_defconfig
@@ -5,18 +5,20 @@ CONFIG_ARCH_X86_64=y
 
 # mem
 CONFIG_MMU=y
-CONFIG_PAGE_OFFSET=0xffffffff00000000
-CONFIG_HIGHMAP_OFFSET=0xffffffffc0000000
+CONFIG_PAGE_OFFSET=0xffffffff80000000
+CONFIG_HIGHMAP_OFFSET=0xffff800000000000
+CONFIG_HIGHMAP_SIZE=0xffff800080000000
 
 CONFIG_SPARCEMEM=y
+CONFIG_SPARCE_SHIFT=26
 
 CONFIG_RAM_BASE=0
 CONFIG_REGION_DMA=y
 CONFIG_DMA_SIZE=0x1000000
 CONFIG_REGION_DMA32=y
-CONFIG_DMA32_SIZE=0xFF000000
+CONFIG_DMA32_SIZE=0x3F400000
 CONFIG_REGION_HIMEM=y
-CONFIG_HIGHMEM_OFFSET=0x49000000
+CONFIG_HIGHMEM_OFFSET=0x80000000
 
 # drivers
 CONFIG_ACPI=y
