--- a/configs/x86_defconfig
+++ b/configs/x86_defconfig
@@ -7,8 +7,10 @@ CONFIG_ARCH_X86_32=y
 CONFIG_MMU=y
 CONFIG_PAGE_OFFSET=0xc0000000
 CONFIG_HIGHMAP_OFFSET=0xf0000000
+CONFIG_HIGHMAP_SIZE=0xffff000
 
 CONFIG_SPARCEMEM=y
+CONFIG_SPARCE_SHIFT=26
 
 CONFIG_RAM_BASE=0
 CONFIG_REGION_DMA=y
