Maintain: Added conflict detection and debug of red black tree.
[rbtree] Functional maintenance.
    -- Red black tree duplicate insertion and deletion detection is added.
        The essence is to set some specific addresses for
        duplicate detection during deletion.

    -- The set of insert conflict functions is added. These functions will
        return an error state when detecting the target conflict, while ordinary
        functions have undefined behavior at this time.

    -- Added some very simple selftest, which can be used as some
        routines of red black tree It only includes insertion, deletion,
        middle order traversal and safe post order traversal.

Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -6,9 +6,10 @@ obj-y += rbtree.o idr.o kfifo.o
 obj-y += param.o kasprintf.o
 obj-y += time.o librtc.o
 obj-y += size.o memdump.o
-obj-$(CONFIG_DEBUG_LIST) += list.o
-obj-$(CONFIG_DEBUG_HLIST) += hlist.o
-obj-$(CONFIG_DEBUG_SLIST) += slist.o
+obj-$(CONFIG_DEBUG_LIST) += list-debug.o
+obj-$(CONFIG_DEBUG_HLIST) += hlist-debug.o
+obj-$(CONFIG_DEBUG_SLIST) += slist-debug.o
+obj-$(CONFIG_DEBUG_RBTREE) += rbtree-debug.o
 obj-$(CONFIG_DEBUG_REFCOUNT) += refcount.o
 obj-$(CONFIG_ARCH_32BIT) += divdi3.o
 obj-$(CONFIG_ACPI) += acpica/
