--- a/usr/selftest/lib/Makefile
+++ b/usr/selftest/lib/Makefile
@@ -1,9 +1,10 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-$(CONFIG_SELFTEST_LIB_BITOPS)   += bitops.o
-obj-$(CONFIG_SELFTEST_LIB_MEMDUMP)  += memdump.o
 obj-$(CONFIG_SELFTEST_LIB_HLIST)    += hlist.o
 obj-$(CONFIG_SELFTEST_LIB_IDR)      += idr.o
 obj-$(CONFIG_SELFTEST_LIB_ILIST)    += ilist.o
 obj-$(CONFIG_SELFTEST_LIB_LIST)     += list.o
+obj-$(CONFIG_SELFTEST_LIB_MEMDUMP)  += memdump.o
 obj-$(CONFIG_SELFTEST_LIB_NCACHE)   += ncache.o
+obj-$(CONFIG_SELFTEST_LIB_RBTREE)   += rbtree.o
 obj-$(CONFIG_SELFTEST_LIB_SLIST)    += slist.o
