Function: Adding a buzzer framework for the first time.
[buzzer] Initialization framework.
    -- We build a simple buzzer framework to describe buzzer devices.
        It integrates a unified panic alarm framework and
        provides some common frequencies.

    -- We separate the pcspkr of IBM PC from the sound framework
        to the buzzer framework.

Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/configs/x86_64_defconfig
+++ b/configs/x86_64_defconfig
@@ -28,6 +28,9 @@ CONFIG_BLK_FLOPPY=y
 CONFIG_BLK_ATASIM=y
 CONFIG_BLK_ATASIM32=y
 
+CONFIG_BUZZER=y
+CONFIG_BUZZER_PCSPKR=y
+
 CONFIG_DT=y
 CONFIG_BUILTIN_DTB=y
 CONFIG_BUILTIN_DTB_PATH="boot/dts/ibmpc.dtb"
