--- a/configs/x86_defconfig
+++ b/configs/x86_defconfig
@@ -26,6 +26,9 @@ CONFIG_BLK_FLOPPY=y
 CONFIG_BLK_ATASIM=y
 CONFIG_BLK_ATASIM32=y
 
+CONFIG_BUZZER=y
+CONFIG_BUZZER_PCSPKR=y
+
 CONFIG_DT=y
 CONFIG_BUILTIN_DTB=y
 CONFIG_BUILTIN_DTB_PATH="boot/dts/virtual-pc.dtb"
@@ -88,7 +91,6 @@ CONFIG_SERIO_I8042=y
 
 CONFIG_SND=y
 CONFIG_SND_ES1370=y
-CONFIG_SND_PCSPKR=y
 
 CONFIG_UART=y
 CONFIG_UART_8250=y
