Maintain: Initialize various structures of x86-64.
[x86-64] Structure initialization.
    -- We don't have the desire to make x86-64 now, so we only distinguish
        between the two different data structures for compatible instructions.

[memory] Add and maintain.
    -- Simply added memory subsystem allocation support
        for pmd pud p4d page tables.

Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/arch/x86/Makefile
+++ b/arch/x86/Makefile
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-y += boot/ lib/ mm/
-obj-y += setup.o proc.o nmi.o
+obj-y += setup.o nmi.o
 obj-y += idt.o irq.o traps.o
 obj-y += e820.o tsc.o syscall.o
 
@@ -9,9 +9,11 @@ obj-$(CONFIG_PRE_CONSOLE) += pre-console.o
 obj-$(CONFIG_ARCH_X86_32) += entry32.o
 obj-$(CONFIG_ARCH_X86_32) += doublefault32.o
 obj-$(CONFIG_ARCH_X86_32) += backtrace32.o
+obj-$(CONFIG_ARCH_X86_32) += proc32.o
 
 obj-$(CONFIG_ARCH_X86_64) += entry64.o
 obj-$(CONFIG_ARCH_X86_64) += backtrace64.o
+obj-$(CONFIG_ARCH_X86_64) += proc64.o
 
 obj-$(CONFIG_SMP) += smp.o
 subdir-$(CONFIG_SMP) += smpboot/
