--- a/arch/x86/mm/Makefile
+++ b/arch/x86/mm/Makefile
@@ -1,3 +1,5 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
-obj-y += himem.o segment.o page.o
-obj-y += tlb.o pgtable.o
+obj-y += segment.o tlb.o pgtable.o
+obj-$(CONFIG_ARCH_X86_32) += init32.o
+obj-$(CONFIG_ARCH_X86_64) += init64.o
+obj-$(CONFIG_ARCH_X86_64) += nx.o
