--- a/configs/x86_64_defconfig
+++ b/configs/x86_64_defconfig
@@ -10,7 +10,7 @@ CONFIG_HIGHMAP_OFFSET=0xffff800000000000
 CONFIG_HIGHMAP_SIZE=0xffff800080000000
 
 CONFIG_SPARCEMEM=y
-CONFIG_SPARCE_SHIFT=26
+CONFIG_SPARCE_SHIFT=27
 
 CONFIG_RAM_BASE=0
 CONFIG_REGION_DMA=y
@@ -33,7 +33,7 @@ CONFIG_BUZZER_PCSPKR=y
 
 CONFIG_DT=y
 CONFIG_BUILTIN_DTB=y
-CONFIG_BUILTIN_DTB_PATH="boot/dts/ibmpc.dtb"
+CONFIG_BUILTIN_DTB_PATH="boot/dts/virtual-pc.dtb"
 
 CONFIG_FIRMWARE=y
 CONFIG_FIRMWARE_DMI=y
