Supplement: Supplementary notification chain makefile.

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -3,7 +3,8 @@ obj-y += device/ lock/ irq/ sched/
 obj-y += printk/ binfmt/ time/
 obj-y += namespace/ task/
 obj-y += kthread.o kcoro.o entry.o
-obj-y += random.o pevent.o
+obj-y += notifier.o pevent.o
 obj-y += crash.o syscall.o
+obj-y += random.o
 obj-y += resource.o power.o
 obj-$(CONFIG_GENERIC_MPIO) += mpio.o
