Function: Added kconfig switch for buzzer panic.
[buzzer] Functional addition.
    -- We have added the switch of buzzer panic work separately,
        which is turned on by default, because we always want
        users to know the occurrence of panic.

Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/drivers/buzzer/Kconfig
+++ b/drivers/buzzer/Kconfig
@@ -3,6 +3,12 @@ menuconfig BUZZER
     bool "Buzzer Device Support"
 if BUZZER
 
+config BUZZER_PANIC
+    bool "Trigger buzzer when panic"
+    default y
+
+comment "Buzzer Device Driver"
+
 config BUZZER_PCSPKR
     bool "PC-Speaker Sound Support"
     depends on CLKEVT_I8253
