Function: Added buzzer driber selftest.
[buzzer] Functional addition.
    -- For the first time, we added the functional test of
        buzzer devices. it will test all buzzer devices.

    -- Fixed the division by zero error of pcspkr
        driver at zero hertz.

Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/usr/selftest/Kconfig
+++ b/usr/selftest/Kconfig
@@ -5,6 +5,8 @@ menuconfig KUSR_SELFTEST
     default y
 if KUSR_SELFTEST
 
+source "usr/selftest/driver/Kconfig"
+
 source "usr/selftest/kernel/Kconfig"
 
 source "usr/selftest/kshell/Kconfig"
