Maintain: Fixed the initialization of some variables.

--- a/boot/kboot/Makefile
+++ b/boot/kboot/Makefile
@@ -27,6 +27,7 @@ endif
 asflags-y   = $(strip $(kboot-asflags-y) $(platform-asflags-y))
 ccflags-y   = $(strip $(kboot-ccflags-y) $(platform-ccflags-y))
 acflags-y   = $(strip $(kboot-acflags-y) $(platform-acflags-y))
+cxflags-y   = $(strip $(kboot-cxflags-y) $(platform-cxflags-y))
 ldsflags-y  = $(strip $(kboot-ldsflags-y) $(platform-ldsflags-y))
 ldflags-y   = $(strip $(kboot-ldflags-y) $(platform-ldflags-y))
 kboot-flags-y = $(strip $(kboot-elfflags-y) $(platform-elfflags-y))
