Function: Added for syntax continue function.
[continue] Functional addition.
    -- The continue instruction informs the loop command
        not to interrupt by returning forever.
        Similarly, we do not have a break instruction,
        but do it by false.

[for/if] Use Tips for maintenance.
    -- We now recommend using curly brackets for grammatical
        judgment, thinking that he can perform grammatical
        nesting, while single quotation marks can often
        only be nested one layer.

Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/usr/command/Kconfig
+++ b/usr/command/Kconfig
@@ -10,6 +10,10 @@ config KCMD_COND
     bool "Cond Command Support"
     default y
 
+config KCMD_CONTINUE
+    bool "Continue Command Support"
+    default y
+
 config KCMD_ECHO
     bool "Echo Command Support"
     default y
