--- a/usr/command/Makefile
+++ b/usr/command/Makefile
@@ -1,6 +1,7 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-$(CONFIG_KCMD_CLEAR)    += clear.o
 obj-$(CONFIG_KCMD_COND)     += cond.o
+obj-$(CONFIG_KCMD_CONTINUE)	+= continue.o
 obj-$(CONFIG_KCMD_ECHO)     += echo.o
 obj-$(CONFIG_KCMD_EXPORT)   += export.o
 obj-$(CONFIG_KCMD_FALSE)    += false.o
