--- a/usr/command/Kconfig
+++ b/usr/command/Kconfig
@@ -66,4 +66,8 @@ config KCMD_WATCH
     bool "Watch Command Support"
     default y
 
+config KCMD_WHILE
+    bool "While Command Support"
+    default y
+
 endmenu
