Function: Added kshell support for mathematical operations.
[math] Functional initialization add.
    -- The operator precedence of this instruction is the
        same as that of the C language, so far we have
        supported all other syntaxes except "?:".

Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/usr/command/Kconfig
+++ b/usr/command/Kconfig
@@ -34,6 +34,10 @@ config KCMD_LOOP
     bool "Loop Command Support"
     default y
 
+config KCMD_MATH
+    bool "Math Command Support"
+    default y
+
 config KCMD_MEM
     bool "Memory Command Support"
     default y
