Function: Added kshell support for function calls.
[func] Functional initialization.
    -- The function call support of kshell is also completed
        by external commands, which includes the declared
        call and release of the function.

Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/usr/command/Kconfig
+++ b/usr/command/Kconfig
@@ -26,6 +26,10 @@ config KCMD_FALSE
     bool "False Command Support"
     default y
 
+config KCMD_FUNC
+    bool "Func Command Support"
+    default y
+
 config KCMD_GOTO
     bool "Goto Command Support"
     default y
