--- a/usr/command/Makefile
+++ b/usr/command/Makefile
@@ -5,6 +5,7 @@ obj-$(CONFIG_KCMD_CONTINUE)	+= continue.o
 obj-$(CONFIG_KCMD_ECHO)     += echo.o
 obj-$(CONFIG_KCMD_EXPORT)   += export.o
 obj-$(CONFIG_KCMD_FALSE)    += false.o
+obj-$(CONFIG_KCMD_FUNC)     += func.o
 obj-$(CONFIG_KCMD_GOTO)     += goto.o
 obj-$(CONFIG_KCMD_LOOP)     += loop.o
 obj-$(CONFIG_KCMD_MATH)     += math.o
