Function: Added kshell context.
[kshell] Major functional change.
    -- We added the context of kshell, which is used to save the
        environment variables and functions of the current shell.
        Each instruction passed in the corresponding context structure.

Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/usr/command/Kconfig
+++ b/usr/command/Kconfig
@@ -3,7 +3,7 @@ menu "Kshell Command Shell"
     depends on KSH
 
 config KCMD_CLEAR
-    bool "CLEAR Command Support"
+    bool "Clear Command Support"
     default y
 
 config KCMD_COND
