Function: Added unit tests for rtc devices.

--- a/usr/selftest/driver/Kconfig
+++ b/usr/selftest/driver/Kconfig
@@ -9,4 +9,9 @@ config SELFTEST_DRIVER_BUZZER
     depends on BUZZER
     default y
 
+config SELFTEST_DRIVER_RTC
+    bool "RTC Unit Tests"
+    depends on RTC
+    default y
+
 endif
