--- a/usr/selftest/lib/Kconfig
+++ b/usr/selftest/lib/Kconfig
@@ -20,6 +20,10 @@ config SELFTEST_LIB_ILIST
     bool "Index List Test"
     default y
 
+config SELFTEST_LIB_KFIFO
+    bool "Kfifo Test"
+    default y
+
 config SELFTEST_LIB_LIST
     bool "List Test"
     default y
