unction: Add led frame for the first time.
[led] Function initialization.
    -- This framework provides a platform for unified description
        of led devices, and provides basic brightness control and
        flicker control, and it also provides some led triggers
        for displaying machine status, etc.

Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/drivers/led/Kconfig
+++ b/drivers/led/Kconfig
@@ -3,4 +3,11 @@ menuconfig LED
     bool "LED Device Support"
 if LED
 
+source "drivers/led/trigger/Kconfig"
+
+config LED_GPIO
+    bool "GPIO Led Bridge"
+    depends on DT
+    default y
+
 endif
