--- a/drivers/led/Makefile
+++ b/drivers/led/Makefile
@@ -1,1 +1,4 @@
- 
+# SPDX-License-Identifier: GPL-2.0-or-later
+obj-y += core/
+obj-$(CONFIG_LED_TRIGGER) += trigger/
+obj-$(CONFIG_LED_GPIO) += gpio.o
