--- a/usr/selftest/driver/Makefile
+++ b/usr/selftest/driver/Makefile
@@ -1,3 +1,4 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-$(CONFIG_SELFTEST_DRIVER_BUZZER) += buzzer.o
+obj-$(CONFIG_SELFTEST_DRIVER_GPIO)   += gpio.o
 obj-$(CONFIG_SELFTEST_DRIVER_RTC)    += rtc.o
