Function: Support intel-ich gpio for the first time.
[gpio/intel-ich] Add platform driver.
    -- This driver is registered by mfd device detection
        and is used for all intel pch devices.

Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/drivers/gpio/Kconfig
+++ b/drivers/gpio/Kconfig
@@ -12,6 +12,10 @@ config GPIO_GENERIC
     bool "Generic GPIO Support"
     depends on DT
 
+config GPIO_INTEL_ICH
+    bool "Intel ICH GPIO Bridge"
+    depends on MFD_ICH
+
 config GPIO_PARALLEL
     bool "Parallel GPIO Bridge"
     depends on PARALLEL && DT
