--- a/drivers/gpio/Makefile
+++ b/drivers/gpio/Makefile
@@ -1,4 +1,5 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-y += core/
 obj-$(CONFIG_GPIO_GENERIC) += generic.o
+obj-$(CONFIG_GPIO_INTEL_ICH) += intel-ich.o
 obj-$(CONFIG_GPIO_PARALLEL) += parallel.o
