Function: Added coretemp hwmon driver.
[hwmon/coretemp] Functional initialization.
    -- This driver is used to read the core temperature
        and package temperature of Intel CPU. At present,
        it only supports reading this core temperature.

Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/drivers/hwmon/Kconfig
+++ b/drivers/hwmon/Kconfig
@@ -7,6 +7,10 @@ config HWMON_AMD_K10
     bool "AMD-K10 Hwmon Support"
     depends on ARCH_X86
 
+config HWMON_CORETEMP
+    bool "Coretemp Hwmon Support"
+    depends on ARCH_X86
+
 config HWMON_DELL_SMM
     bool "Dell-SMM Hwmon Support"
     depends on ARCH_X86
