--- a/drivers/hwmon/Makefile
+++ b/drivers/hwmon/Makefile
@@ -1,4 +1,5 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-y += core/
 obj-$(CONFIG_HWMON_AMD_K10) += amd-k10.o
+obj-$(CONFIG_HWMON_CORETEMP) += coretemp.o
 obj-$(CONFIG_HWMON_DELL_SMM) += dell-smm.o
