Function: Added simple hwmon framework.
[hwmon] Adding this frame for the first time.
    -- This framework is used to provide a compatibility
        layer to describing device monitoring devices
        such as embedded controllers and super I/O control chips.

    -- Added basic unit tests for testing device functionality.

Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/usr/selftest/driver/Kconfig
+++ b/usr/selftest/driver/Kconfig
@@ -11,7 +11,12 @@ config SELFTEST_DRIVER_BUZZER
 
 config SELFTEST_DRIVER_GPIO
     bool "GPIO Unit Tests"
-    depends on BUZZER
+    depends on GPIO
+    default y
+
+config SELFTEST_DRIVER_HWMON
+    bool "HWMON Unit Tests"
+    depends on HWMON
     default y
 
 config SELFTEST_DRIVER_RTC
