--- a/boot/dts/virtual-pc.dts
+++ b/boot/dts/virtual-pc.dts
@@ -61,10 +61,10 @@
             compatible = "spi-gpio";
             num-chipselects = <2>;
             gpio-miso = <&lpt0_gpio GPIO_PARALLEL_ACK GPIO_ACTIVE_LOW>;
-            gpio-mosi = <&lpt0_gpio GPIO_PARALLEL_D7 GPIO_ACTIVE_LOW>;
-            gpio-sck = <&lpt0_gpio GPIO_PARALLEL_D6 GPIO_ACTIVE_LOW>;
-            cs-gpios = <&lpt0_gpio GPIO_PARALLEL_D5 GPIO_ACTIVE_LOW>,
-                    <&lpt0_gpio GPIO_PARALLEL_D4 GPIO_ACTIVE_LOW>;
+            gpio-mosi = <&lpt0_gpio GPIO_PARALLEL_D7  GPIO_ACTIVE_LOW>;
+            gpio-sck  = <&lpt0_gpio GPIO_PARALLEL_D6  GPIO_ACTIVE_LOW>;
+            cs-gpios  = <&lpt0_gpio GPIO_PARALLEL_D5  GPIO_ACTIVE_LOW>,
+                        <&lpt0_gpio GPIO_PARALLEL_D4  GPIO_ACTIVE_LOW>;
             #address-cells = <1>;
             #size-cells = <0>;
             status = "disabled";
@@ -86,13 +86,33 @@
             compatible = "gpio-leds";
             led0 {
                 label = "lpt0:led0";
-                gpios = <&lpt0_gpio GPIO_PARALLEL_D0 GPIO_ACTIVE_LOW>;
+                gpios = <&lpt0_gpio GPIO_PARALLEL_D0 GPIO_ACTIVE_HIGH>;
                 default-trigger = "power";
             };
             led1 {
                 label = "lpt0:led1";
-                gpios = <&lpt0_gpio GPIO_PARALLEL_D1 GPIO_ACTIVE_LOW>;
-                default-trigger = "heartbeat";
+                gpios = <&lpt0_gpio GPIO_PARALLEL_D1 GPIO_ACTIVE_HIGH>;
+                default-trigger = "periodic";
+            };
+        };
+
+        gpio-keys-polled {
+            compatible = "gpio-keys-polled";
+            poll-interval = <1000>;
+            key0 {
+                label = "lpt0:key0";
+                gpios = <&lpt0_gpio GPIO_PARALLEL_BUSY GPIO_ACTIVE_LOW>;
+                input,code = <1>;
+            };
+            key1 {
+                label = "lpt0:key1";
+                gpios = <&lpt0_gpio GPIO_PARALLEL_PAPEROUT GPIO_ACTIVE_LOW>;
+                input,code = <2>;
+            };
+            key2 {
+                label = "lpt0:key2";
+                gpios = <&lpt0_gpio GPIO_PARALLEL_SELIN GPIO_ACTIVE_LOW>;
+                input,code = <3>;
             };
         };
     };
