Function: Added function of kshell to get processor information.
[kshell/arch] Add processor toolset.
    -- Added x86-cpuid, which is used to get all the features of the cpu.

    -- Added x86-msr, which is used to manipulate special registers of the processor.

Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/usr/command/Kconfig
+++ b/usr/command/Kconfig
@@ -86,4 +86,6 @@ config KCMD_WHILE
     bool "While Command Support"
     default y
 
-endmenu
+source "usr/command/arch/Kconfig"
+
+endmenu # Kshell Command Shell
