--- a/drivers/rng/Makefile
+++ b/drivers/rng/Makefile
@@ -1,3 +1,4 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-y += core/
-obj-$(CONFIG_RNG_INTEL) += intel.o
+obj-$(CONFIG_RNG_INTEL_RDRAND) += intel-rdrand.o
+obj-$(CONFIG_RNG_INTEL_PCH) += intel.o
