--- a/configs/x86_defconfig
+++ b/configs/x86_defconfig
@@ -83,6 +83,10 @@ CONFIG_POWER_PIIX=y
 CONFIG_POWER_PIIX4=y
 CONFIG_POWER_RDC321X=y
 
+CONFIG_RNG=y
+CONFIG_RNG_INTEL_RDRNG=y
+CONFIG_RNG_INTEL_PCH=y
+
 CONFIG_RTC=y
 CONFIG_RTC_MC146818=y
 
