--- a/usr/selftest/driver/Makefile
+++ b/usr/selftest/driver/Makefile
@@ -2,4 +2,5 @@
 obj-$(CONFIG_SELFTEST_DRIVER_BUZZER) += buzzer.o
 obj-$(CONFIG_SELFTEST_DRIVER_GPIO)   += gpio.o
 obj-$(CONFIG_SELFTEST_DRIVER_HWMON)  += hwmon.o
+obj-$(CONFIG_SELFTEST_DRIVER_RNG)    += rng.o
 obj-$(CONFIG_SELFTEST_DRIVER_RTC)    += rtc.o
