Maintain: Enable x86_defconfig to support hwmon and ich-gpio.

--- a/configs/x86_defconfig
+++ b/configs/x86_defconfig
@@ -38,7 +38,11 @@ CONFIG_FIRMWARE_DMI=y
 CONFIG_FIRMWARE_QEMU=y
 
 CONFIG_GPIO=y
+CONFIG_GPIO_INTEL_ICH=y
 CONFIG_GPIO_PARALLEL=y
+
+CONFIG_HWMON=y
+CONFIG_HWMON_CORETEMP=y
 
 CONFIG_I2C=y
 CONFIG_I2C_I801=y
