Function: Added binary search method for linear arrays.
[bsearch] Functional addition.
    -- Added bsearch search library, which uses binary
        search to search arrays, mainly for speeding up
        sequential array searches.

Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -2,7 +2,8 @@
 obj-y += libc/ font/ crypto/
 obj-y += bitops.o bitmap.o ncache.o
 obj-y += sort.o klist.o ilist.o
-obj-y += rbtree.o idr.o kfifo.o
+obj-y += rbtree.o idr.o bsearch.o
+obj-y += kfifo.o queue.o
 obj-y += param.o kasprintf.o
 obj-y += time.o librtc.o
 obj-y += size.o memdump.o
