Function: Mainly added manual command.
[kshell] Features added and maintained.
    -- A simple man command has been added, which provides
        a unified introduction platform for kshell commands.
        Currently, only the usage of shell shortcut keys is provided.

    -- We separate out the terminal input and output parts
        to prepare for our next step to support scanf.

Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/usr/Kconfig
+++ b/usr/Kconfig
@@ -1,18 +1,20 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 menuconfig KUSR
-    bool "Kernel Application Config"
+    bool "Kernel Application"
     default y
 if KUSR
 
-config KSH
-    bool "Kernel Shell Support"
+config KSHELL
+    bool "Kshell Support"
     default y
 
-config KSH_DEPTH
-    int "Kernel Shell Maximum Depth"
+config KSHELL_DEPTH
+    int "Kshell Maximum Depth"
     default 10
 
 source "usr/command/Kconfig"
+
+source "usr/manual/Kconfig"
 
 source "usr/selftest/Kconfig"
 
