--- a/usr/Makefile
+++ b/usr/Makefile
@@ -1,3 +1,4 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-$(CONFIG_KSHELL) += kshell/ command/
-obj-$(CONFIG_KUSR_SELFTEST) += selftest/
+obj-$(CONFIG_KSH_MANUAL) += manual/
+obj-$(CONFIG_KSH_SELFTEST) += selftest/
