--- a/lib/libc/Makefile
+++ b/lib/libc/Makefile
@@ -1,4 +1,4 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 ccflags-y := -Ofast
 obj-y += ctype.o string.o stdlib.o
-obj-y += stdio.o vsnprintf.o
+obj-y += stdio.o vsnprintf.o vsscanf.o
