--- a/lib/Makefile
+++ b/lib/Makefile
@@ -6,7 +6,7 @@ obj-y += llist.o rbtree.o idr.o
 obj-y += kfifo.o bsearch.o
 obj-y += param.o kasprintf.o
 obj-y += time.o librtc.o
-obj-y += size.o memdump.o
+obj-y += size.o memdump.o ratelimit.o
 obj-$(CONFIG_DEBUG_LIST) += list-debug.o
 obj-$(CONFIG_DEBUG_HLIST) += hlist-debug.o
 obj-$(CONFIG_DEBUG_SLIST) += slist-debug.o
