Function: Lrange for interval mapping added.
[lrange] Functional initialization.
    -- this framework is used to map the relationship between
        selectors and linear values, and can be used to convert
        device registers to actual values.

Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -5,7 +5,7 @@ obj-y += sort.o klist.o ilist.o
 obj-y += llist.o rbtree.o idr.o
 obj-y += kfifo.o bsearch.o
 obj-y += param.o kasprintf.o
-obj-y += time.o librtc.o
+obj-y += time.o librtc.o lrange.o
 obj-y += size.o memdump.o ratelimit.o
 obj-$(CONFIG_DEBUG_LIST) += list-debug.o
 obj-$(CONFIG_DEBUG_HLIST) += hlist-debug.o
