Function: Added pseudo-random generation algorithm.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -5,9 +5,9 @@ obj-y += bsearch.o bytefill.o
 obj-y += ncache.o kfifo.o
 obj-y += rbtree.o
 obj-y += sort.o klist.o ilist.o
-obj-y += llist.o idr.o
+obj-y += llist.o idr.o lrange.o
 obj-y += param.o kasprintf.o
-obj-y += time.o librtc.o lrange.o
+obj-y += time.o librtc.o prandom.o
 obj-y += size.o memdump.o ratelimit.o
 obj-$(CONFIG_DEBUG_LIST) += list-debug.o
 obj-$(CONFIG_DEBUG_HLIST) += hlist-debug.o
