Function: Added segment tree.
[segtree] Functional addition.
    -- Segment tree is used to manage interval nodes.
        Nodes can contain each other.

Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -3,7 +3,7 @@ obj-y += libc/ font/ crypto/
 obj-y += bitops.o bitmap.o
 obj-y += bsearch.o bytefill.o
 obj-y += ncache.o kfifo.o
-obj-y += rbtree.o
+obj-y += rbtree.o segtree.o
 obj-y += sort.o klist.o ilist.o
 obj-y += llist.o idr.o lrange.o
 obj-y += param.o kasprintf.o
