Function: Added framedraw support for rectangle drawing.
[fillrect] Functional addition.
    -- This frame is used to fill rectangles directly
        into the framebuffer.

Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -10,7 +10,7 @@ obj-y += llist.o idr.o lrange.o
 obj-y += param.o kasprintf.o
 obj-y += time.o librtc.o prandom.o
 obj-y += size.o memdump.o ratelimit.o
-obj-y += imageblit.o
+obj-y += imageblit.o fillrect.o
 obj-$(CONFIG_DEBUG_LIST) += list-debug.o
 obj-$(CONFIG_DEBUG_HLIST) += hlist-debug.o
 obj-$(CONFIG_DEBUG_SLIST) += slist-debug.o
