--- a/kernel/printk/Makefile
+++ b/kernel/printk/Makefile
@@ -1,4 +1,5 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-y += console.o
 obj-y += printk.o
-obj-$(CONFIG_PRE_CONSOLE) += pre-console.o bootcon.o
+obj-$(CONFIG_EARLYCON) += earlycon.o
+obj-$(CONFIG_EARLYCON) += bootcon.o
