--- a/usr/selftest/lib/Makefile
+++ b/usr/selftest/lib/Makefile
@@ -11,3 +11,4 @@ obj-$(CONFIG_SELFTEST_LIB_NCACHE)   += ncache.o
 obj-$(CONFIG_SELFTEST_LIB_RBTREE)   += rbtree.o
 obj-$(CONFIG_SELFTEST_LIB_SEGTREE)  += segtree.o
 obj-$(CONFIG_SELFTEST_LIB_SLIST)    += slist.o
+obj-$(CONFIG_SELFTEST_LIB_UUID)     += uuid.o
