--- a/usr/selftest/lib/Makefile
+++ b/usr/selftest/lib/Makefile
@@ -3,6 +3,7 @@ obj-$(CONFIG_SELFTEST_LIB_BITOPS)   += bitops.o
 obj-$(CONFIG_SELFTEST_LIB_HLIST)    += hlist.o
 obj-$(CONFIG_SELFTEST_LIB_IDR)      += idr.o
 obj-$(CONFIG_SELFTEST_LIB_ILIST)    += ilist.o
+obj-$(CONFIG_SELFTEST_LIB_JSON)     += json.o
 obj-$(CONFIG_SELFTEST_LIB_LIBCPIO)	+= libcpio.o
 obj-$(CONFIG_SELFTEST_LIB_KFIFO)    += kfifo.o
 obj-$(CONFIG_SELFTEST_LIB_LIST)     += list.o
