Function: Added relatively complete xml unit test.

--- a/usr/selftest/lib/Kconfig
+++ b/usr/selftest/lib/Kconfig
@@ -61,4 +61,8 @@ config SELFTEST_LIB_UUID
     bool "UUID Unit Test"
     default y
 
+config SELFTEST_LIB_XML
+    bool "Xml Unit Test"
+    default y
+
 endif
