--- a/lib/Makefile
+++ b/lib/Makefile
@@ -4,7 +4,7 @@ obj-y += errname.o bitrev.o
 obj-y += bitops.o bitmap.o
 obj-y += bsearch.o bytefill.o
 obj-y += ncache.o kfifo.o
-obj-y += rbtree.o segtree.o
+obj-y += heap.o rbtree.o segtree.o
 obj-y += sort.o klist.o ilist.o
 obj-y += llist.o idr.o lrange.o
 obj-y += param.o kasprintf.o
