--- a/usr/selftest/lib/Makefile
+++ b/usr/selftest/lib/Makefile
@@ -1,6 +1,7 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-$(CONFIG_SELFTEST_LIB_BITOPS)   += bitops.o
 obj-$(CONFIG_SELFTEST_LIB_GLOB)     += glob.o
+obj-$(CONFIG_SELFTEST_LIB_HEAP)     += heap.o
 obj-$(CONFIG_SELFTEST_LIB_HLIST)    += hlist.o
 obj-$(CONFIG_SELFTEST_LIB_IDR)      += idr.o
 obj-$(CONFIG_SELFTEST_LIB_ILIST)    += ilist.o
